syntax="proto3";

package message;

message BrokerMessage {
    string source = 1;
    repeated string targets = 2;
    SourceMessage sourceMessage = 3;
}

message TargetMessage {
    string target = 1;
    string source = 2;
    SourceMessage sourceMessage = 3;
}

message SourceMessage {
    string id = 1;
    bytes message = 2;
    map<string, string> meta = 3;
    Attributes attributes = 4;
}

message Attributes {
    int64 timestamp = 1;
    string type = 2;
}